--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,9 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
+
+  intl: ^0.17.0
+
   cupertino_icons: ^1.0.2
 
   connectivity_plus: ^2.3.0
